--- a/src/components/button-add/button-add.styles.scss
+++ b/src/components/button-add/button-add.styles.scss
@@ -19,8 +19,8 @@
 
     &:hover {
       cursor: pointer;
-      background-color: white;
-      color: black;
+      // background-color: white;
+      // color: black;
       transform: translateY(-0.3rem);
     }
 
