--- a/src/components/input-field/input-field.styles.scss
+++ b/src/components/input-field/input-field.styles.scss
@@ -1,13 +1,52 @@
-.input-field {
-    padding: 5px;
-    margin: 5px 0;
-    border: none;
-    border-bottom: .8px solid black;
-    width: 50%;
-    font-size: 3rem;
+.input-form {
+  width: 70%;
 
+  .input-form-group {
+    position: relative;
+  }
+
+  .input-field {
+    border: none;
+    border-bottom: 0.8px solid black;
+    width: 100%;
+  
     &:focus {
-        outline: none;
+      outline: 2px solid blue;
     }
 
+    // &:focus+&__icon {
+    //   opacity: 1;
+    // }
+
+    &--large {
+      font-size: 3rem;
+      padding: 0.7rem;
+      margin: 0.7rem 0;
+    }
+  
+    &--small {
+      font-size: 1.8rem;
+      padding: 0.5rem;
+      margin: 0.5rem 0;
+    }
+  
+    &__icon {
+      position: absolute;
+      top: 28%;
+      right: 0.1%;
+      opacity: 0;
+      // transform: translate(-130%, -50%);
+      // transition: all .2s;
+    }
+  }
+
+.input-field:focus+.input-field__icon {
+  opacity: 1;
+} 
 }
+
+
+
+
+
+
