--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -2,6 +2,7 @@
   width: 70%;
   display: inline-block;
   font-size: 3rem;
+  line-height: 3rem;
   border-bottom: 1px solid black;
   margin: 2rem 0;
   padding: 1rem;
@@ -13,8 +14,12 @@
     transform: translateY(-0.3rem) scale(1.04);
   }
 
+  &__icon {
+    opacity: 0;
+  }
+
   &:hover &__icon {
-    opacity: .9;
+    opacity: 0.9;
   }
 
   &__text {
@@ -26,18 +31,6 @@
 
     &--pending {
       text-decoration: none;
-    }
-  }
-
-  &__icon {
-    float: right;
-    font-size: 4rem;
-    opacity: 0;
-    transition: all .2s;
-    margin: 0 1rem;
-
-    &:hover {
-        transform: translateY(-0.3rem) scale(1.04);
     }
   }
 }
