--- a/src/components/button-add/button-add.styles.scss
+++ b/src/components/button-add/button-add.styles.scss
@@ -15,6 +15,7 @@
     display: inline-block;
     position: relative;
     top: 0.5rem;
+    // right: 6rem;
     transition: all 0.2s;
 
     &:hover {
