--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -1,12 +1,16 @@
+@import "../../constants/constants";
+
 .todo-item {
   width: 70%;
   display: inline-block;
   font-size: 3rem;
   line-height: 3rem;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid $color-black;
   margin: 2rem 0;
   padding: 1rem;
   border-radius: 2px;
+
+  box-shadow: 0 1rem 3rem rgba($color-black, .15);
 
   transition: all 0.2s;
 
