--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem;
+  /* padding: 3rem; */
   
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
