--- a/src/components/overlay/overlay.styles.scss
+++ b/src/components/overlay/overlay.styles.scss
@@ -1,19 +1,26 @@
 @import "../../constants/constants";
 
 .overlay {
-    &--show-true {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: $color-black;
-        opacity: 0.5;
-        z-index: 10;
-    }
+  &--opaque {
+    opacity: 0.5;
+  }
+  &--transparent {
+    opacity: 0;
+  }
 
-    &--show-false {
-        height: 0%;
-        width: 0%;
-    }
+  &--show-true {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: $color-black;
+
+    z-index: 10;
+  }
+
+  &--show-false {
+    height: 0%;
+    width: 0%;
+  }
 }
