--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -8,7 +8,7 @@
   margin-bottom: 5rem;
   position: relative;
   display: inline-block;
-   transition: all 0.2s;
+  transition: all 0.2s;
 
   &:hover {
     transform: translateY(-0.3rem) scale(1.04);
@@ -85,17 +85,9 @@
       }
 
       & > .todo-item__text {
-        display: inline-block;
         font-size: 1.5rem;
-        margin: 1rem 0;
-        width: 50%;
         line-height: 0.5rem;
-      }
-
-      & > .todo-item__icons {
-        display: inline-block;
-        width: 50%;
-        padding: 1rem 0;
+        padding: 0 1rem;
       }
     }
   }
@@ -106,13 +98,25 @@
     width: 100%;
     height: 15%;
     opacity: 0;
+    float: right;
 
-     transition: all 0.2s;
+    transition: all 0.2s;
+  }
+
+  &__text-group {
+    margin: 2rem 0;
+    height: 80%;
+    position: relative;
   }
 
   &__text {
-    margin: 3rem 0;
-    width: 80%;
+    position: absolute;
+    top: 2rem;
+    left: 0;
+
+    &--done {
+      text-decoration: line-through;
+    }
   }
 
   //BACKSIDE STYLING
@@ -123,6 +127,6 @@
     border: 1px solid $color-black;
     padding: 0.5rem 0;
     overflow: auto;
-    height: 70%;
+    height: 100%;
   }
 }
