--- a/src/components/todo-input/todo-input.styles.scss
+++ b/src/components/todo-input/todo-input.styles.scss
@@ -1,26 +1,34 @@
 @import "../../constants/mixins";
 @import "../../constants//constants";
 
-.input-container {
-  text-align: center;
+.test-button {
+  background-color: black;
 
-  .test-button {
-    background-color: black;
-
-    @include themeDark {
-      background-color: $color-black;
-    }
-
-    @include themeLight {
-      background-color: $color-white;
-    }
-
-    .input-box {
-      display: inline-block;
-      width: 70vw;
-      margin: 2rem 0;
-      padding: 2rem 0;
-      z-index: 100;
-    }
+  @include themeDark {
+    background-color: $color-black;
   }
+
+  @include themeLight {
+    background-color: $color-white;
+  }
+}
+
+.search-form {
+  display: flex;
+  padding: .5rem;
+
+}
+
+.search-field {
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: .7rem;
+  border: none;
+  width: 30vw;
+  
+
+  &:focus {
+    outline: none;
+  }
+
 }
