--- a/src/constants/_constants.scss
+++ b/src/constants/_constants.scss
@@ -1,7 +1,20 @@
-$color-primary: #3282b8;
-$color-primary-light: #bbe1fa;
-$color-primary-dark: #0f4c75;
-$color-primary-very-dark: #1b262c;
+$color-blue-light-1: #bbe1fa;
+$color-blue-light-2: #3282b8;
+$color-blue-dark: #0f4c75;
+$color-blue-very-dark: #1b262c;
 
 $color-white: #eee;
 $color-black: #000;
+
+$color-primary: #eb2f64;
+$color-primary-light: #ff3366;
+$color-primary-dark: #ba265d;
+
+$color-grey-light-3: #f0eeee;
+$color-grey-light-1: #faf9f9;
+$color-grey-light-2: #f4f2f2;
+$color-grey-light-4: #ccc;
+
+$color-grey-dark-1: #333;
+$color-grey-dark-2: #777;
+$color-grey-dark-3: #999;
