--- a/src/components/searchResultList/searchResultList.styles.scss
+++ b/src/components/searchResultList/searchResultList.styles.scss
@@ -1,5 +1,34 @@
+@import "../../constants/constants";
+
 .search-results {
     width: 100%;
     display: flex;
     flex-direction: column;
+
+
+    &__header {
+        background-color: $color-grey-dark-2;
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #fff;
+        padding-left: 1rem;
+
+    }
+
+    &__records {
+        list-style: none;
+        font-size: 1.2rem;
+        padding: .5rem 0 .5rem 1rem;
+    }
+
+    &__record {
+        transition: all .2s;
+
+        &:hover {
+            cursor: pointer;
+            font-weight: bold;
+            transform: scale(1.01);
+        }
+
+    }
 } 
