--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -1,11 +1,19 @@
 @import "../../constants/constants";
 
+.todo-container {
+  display: flex;
+  flex-direction: row;
+  height: 15rem;
+
+  margin: 2rem 0 5rem 2rem;
+}
+
 .todo-item {
   perspective: 150rem;
 
   width: 35rem;
-  height: 15rem;
-  margin: 2rem 0 5rem 2rem;
+  height: 100%;
+
   transition: all 0.2s;
   padding: 1rem;
 
@@ -22,16 +30,6 @@
   }
 
   // ICONS
-
-  &__icons {
-    padding: 1rem 0 2rem 0;
-    display: block;
-    width: 100%;
-    height: 15%;
-    opacity: 0;
-
-    transition: all 0.2s;
-  }
 
   &__text {
     width: 100%;
@@ -85,60 +83,98 @@
       transform: rotateX(-180deg);
       z-index: -10;
 
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 20% 1fr 20%;
+      align-items: center;
+
       &--visible {
         transform: rotateX(0);
         z-index: 10;
       }
-
-      & > .todo-item__text {
-        font-size: 1.5rem;
-        padding: 0 1rem;
-      }
     }
   }
 
-  // FRONT - DETAILS
+  // INDIVIDUAL COMPONENTS
 
-  &__front-title {
-    font-size: 3rem;
+  &__title {
+    &--front {
+      font-size: 3rem;
+    }
+
+    &--back {
+      grid-column: 1 / span 1;
+      grid-row: 1 / 2;
+
+      font-size: 1.5rem;
+      margin: 0 1rem;
+      font-weight: bold;
+    }
   }
 
-  &__front-details {
-    font-size: 1.5rem;
-    margin-bottom: 2.5rem;
+  &__icons {
+    padding: 1rem 0 2rem 0;
+    width: 100%;
+    height: 15%;
+    opacity: 0;
 
-    display: flex;
-    justify-content: space-between;
+    transition: all 0.2s;
+
+    &--back {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+    }
   }
 
-  // BACK - DETAILS
+  &__details {
+    &--front {
+      font-size: 1.5rem;
+      margin-bottom: 2.5rem;
 
-  &__back-title {
-    font-size: 1.5rem;
-    margin-bottom: 0.7rem;
+      display: flex;
+      justify-content: space-between;
+    }
 
-    display: grid;
-    grid-template-columns: 1fr max-content 1fr;
-    grid-column-gap: 1.2rem;
-    align-items: center;
+    &--back {
+      grid-column: 1 / -1;
+      grid-row: 2 / 3;
+
+      font-size: 1.2rem;
+      border: 0.7px solid $color-black;
+      padding: 0.5rem;
+      overflow: auto;
+      height: 90%;
+      margin: 0 1rem;
+    }
   }
 
+  &__duedate {
+    span {
+      border: 1px solid black;
+      padding: 0 0.5rem;
+      background-color: $color-blue-dark;
+      color: $color-grey-light-1;
+    }
 
-  &__back-title::before,
-  &__back-title::after {
-    content: "";
-    height: 1px;
-    display: block;
-    background-color: currentColor;
+    &--back {
+      grid-column: 1 / 2;
+      justify-self: center;
+    }
   }
 
-  &__back-details {
-    font-size: 1.2rem;
-    border: 0.7px solid $color-black;
-    padding: 0.5rem;
-    overflow: auto;
-    height: 100%;
-    margin-bottom: 1.5rem;
+  &__owner {
+    span {
+      border: 1px solid black;
+      padding: 0 0.5rem;
+      margin: 0 0.5rem;
+      background-color: $color-grey-dark-1;
+      color: $color-grey-light-1;
+    }
+
+    &--back {
+      grid-column: 2 / 3;
+      justify-self: center;
+    }
   }
 
   &__text {
@@ -147,3 +183,4 @@
     }
   }
 }
+
