--- a/src/constants/_constants.scss
+++ b/src/constants/_constants.scss
@@ -18,3 +18,9 @@ $color-grey-light-4: #ccc;
 $color-grey-dark-1: #333;
 $color-grey-dark-2: #777;
 $color-grey-dark-3: #999;
+
+$color-custom-1: #3D348B;
+$color-custom-2: #7678ED;
+$color-custom-3: #F7B801;
+$color-custom-4: #F18701;
+$color-custom-5: #F35B04;
