--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -151,10 +151,7 @@
 
   &__duedate {
     span {
-      border: 1px solid black;
-      padding: 0 0.5rem;
-      background-color: $color-blue-dark;
-      color: $color-grey-light-1;
+      @extend %duedate-format;
     }
 
     &--back {
@@ -165,11 +162,7 @@
 
   &__owner {
     span {
-      border: 1px solid black;
-      padding: 0 0.5rem;
-      margin: 0 0.5rem;
-      background-color: $color-grey-dark-1;
-      color: $color-grey-light-1;
+      @extend %owner-format;
     }
 
     &--back {
