Finalised sorting functionality - sorting by 1 column possible for now. Introduced reselect and created selectors for todo-container and top-nav components

--- a/src/constants/_constants.scss
+++ b/src/constants/_constants.scss
@@ -38,3 +38,8 @@ $color-custom-5: #F35B04;
     background-color: $color-grey-dark-1;
     color: $color-grey-light-1;
 }
+
+%non-selectable {
+    color: currentColor;
+    background-color: transparent;
+}
