--- a/src/components/nav-top/nav-top.styles.scss
+++ b/src/components/nav-top/nav-top.styles.scss
@@ -1,3 +1,5 @@
+@import "../../constants/constants";
+
 .header-top {
   height: 6rem;
   background-color: greenyellow;
@@ -26,7 +28,7 @@
     }
   }
 
-  &__item-title {
-    margin-right: .3rem;
+  &__item::selection {
+    @extend %non-selectable;
   }
 }
