Introduced todo-list-container component and related schema and model server-side; added side-effect (for now in thunk) for fetching an array of todo-lists (each containing a sub-set of todos); split the main app window into two parts (cocpit and todolists)

--- a/src/components/nav-top/nav-top.styles.scss
+++ b/src/components/nav-top/nav-top.styles.scss
@@ -1,7 +1,8 @@
 @import "../../constants/constants";
 
 .header-top {
-  height: 6rem;
+  // position: fixed;
+  height: 4rem;
   background-color: greenyellow;
 
   display: flex;
@@ -10,21 +11,21 @@
 
   &__items {
     display: flex;
-    margin-left: 2rem;
+    margin-left: 1rem;
   }
 
   &__action-icons {
-    margin-right: 2rem;
+    margin-right: 1rem;
   }
 
   &__item-box {
-    font-size: 1.7rem;
+    font-size: 1.2rem;
 
     display: flex;
     align-items: center;
 
     &:not(:first-child) {
-      margin-left: 2rem;
+      margin-left: 1rem;
     }
   }
 
