--- a/src/App.styles.scss
+++ b/src/App.styles.scss
@@ -1,19 +1,28 @@
 .app {
   max-width: 120rem;
   margin: 5rem auto;
+  height: 100%;
 
   display: flex;
 
-  &__nav-side {
-    flex: 0 0 18%;
+}
 
-    display: flex;
-    flex-direction: column;
+.app-split {
+  position: fixed;
+  height: 100%;
+  top: 0px;
+  border: 3px solid orangered;
+  overflow-x: scroll;
+  overflow-y: visible;
+
+
+  &__left-side {
+    left: 0px;
+    width: 30vw;
   }
 
-  &__content {
-    flex: 1;
+  &__right-side {
+    right: 0px;
+    width: 70vw;
   }
-
-
 }
