Added Cockpit component for managing and querying individual lists. Customized ToDoContainer component so that it can take custom NavBar (provided by Cockpit). Redux and server-side code for adding new list. Saga still to be added.

--- a/src/components/todo-input/todo-input.styles.scss
+++ b/src/components/todo-input/todo-input.styles.scss
@@ -1,18 +1,6 @@
 @import "../../constants/mixins";
 @import "../../constants//constants";
 
-.test-button {
-  background-color: black;
-
-  @include themeDark {
-    background-color: $color-black;
-  }
-
-  @include themeLight {
-    background-color: $color-white;
-  }
-}
-
 .search-form {
   display: flex;
   padding: .5rem;
@@ -25,6 +13,7 @@
   padding: .7rem;
   border: none;
   width: 30vw;
+  border: 2px solid red;
   
 
   &:focus {
