--- a/src/App.styles.scss
+++ b/src/App.styles.scss
@@ -1,14 +1,14 @@
 .app {
   max-width: 120rem;
-  margin: 5rem auto;
-  height: 100%;
+  // margin: 5rem auto;
+  height: 100vh;
 
   display: flex;
 
 }
 
 .app-split {
-  position: fixed;
+  // position: fixed;
   height: 100%;
   top: 0px;
   border: 3px solid orangered;
