--- a/src/components/todo-cockpit/todo-cockpit.styles.scss
+++ b/src/components/todo-cockpit/todo-cockpit.styles.scss
@@ -3,3 +3,10 @@
     height: 100%;
     border: 3px solid greenyellow;
 }
+
+.add-list-input {
+    position: absolute;
+    top: 5rem;
+    left: 2rem;
+    z-index: 50;
+} 
