--- a/src/components/searchResultList/searchResultList.styles.scss
+++ b/src/components/searchResultList/searchResultList.styles.scss
@@ -1,38 +1,39 @@
 @import "../../constants/constants";
 
 .search-results {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 
+  &__header {
+    background-color: $color-grey-dark-1;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #fff;
+    padding-left: 1rem;
 
-    &__header {
-        background-color: $color-grey-dark-1;
-        font-size: 1.5rem;
-        font-weight: bold;
-        color: #fff;
-        padding-left: 1rem;
+    &--all {
+      background-color: $color-blue-light-2;
+    }
+  }
 
+  &__records {
+    list-style: none;
+    font-size: 1.2rem;
+    padding: 0.5rem 0 0.5rem 1rem;
+  }
+
+  &__record {
+    transition: all 0.2s;
+
+    &:hover {
+      cursor: pointer;
+      font-weight: bold;
+      transform: scale(1.01);
     }
 
-    &__records {
-        list-style: none;
-        font-size: 1.2rem;
-        padding: .5rem 0 .5rem 1rem;
+    & span {
+      background-color: yellow;
     }
-
-    &__record {
-        transition: all .2s;
-
-        &:hover {
-            cursor: pointer;
-            font-weight: bold;
-            transform: scale(1.01);
-        }
-
-        & span {
-            background-color: yellow;
-        }
-
-    }
-} 
+  }
+}
