--- a/src/components/searchResultList/searchResultList.styles.scss
+++ b/src/components/searchResultList/searchResultList.styles.scss
@@ -1,6 +1,14 @@
 @import "../../constants/constants";
 
+.search-results-container {
+  position: relative;
+}
+
+
 .search-results {
+  position: absolute;
+  z-index: 10;
+  background-color:$color-white;
   width: 100%;
   display: flex;
   flex-direction: column;
