--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -3,38 +3,26 @@
 .todo-container {
   display: flex;
   flex-direction: row;
-  height: 15rem;
-
-  margin: 1rem 0 1rem 1rem;
+  height: 12rem;
+  margin: 1rem;
 }
 
 .todo-item {
   perspective: 150rem;
-
-  width: 35rem;
   height: 100%;
-
+  width: 100%;
   transition: all 0.2s;
-  padding: 1rem;
 
   &:hover {
     transform: translateY(-0.3rem) scale(1.04);
   }
 
-  &:hover &__side--front--visible > &__icons {
-    opacity: 0.9;
-  }
-
-  &:hover &__side--back--visible > &__icons {
-    opacity: 0.9;
-  }
-
   // ICONS
 
-  &__text {
+  &__content {
     width: 100%;
-    height: calc(85% - 1rem);
-    padding: 0 1.2rem;
+    height: 100%;
+    padding: 1rem;
 
     display: flex;
     flex-direction: column;
@@ -64,7 +52,7 @@
         z-index: 10;
       }
 
-      & > .todo-item__text {
+      & > .todo-item__content {
         justify-content: space-between;
 
         &--done {
@@ -97,27 +85,25 @@
 
   // INDIVIDUAL COMPONENTS
 
+  &__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
   &__title {
-    &--front {
-      font-size: 3rem;
-    }
+    font-size: 2rem;
 
     &--back {
       grid-column: 1 / span 1;
       grid-row: 1 / 2;
 
-      font-size: 1.5rem;
+      // font-size: 1.5rem;
       margin: 0 1rem;
-      font-weight: bold;
     }
   }
 
   &__icons {
-    padding: 1rem 0 2rem 0;
-    width: 100%;
-    height: 15%;
-    opacity: 0;
-
     transition: all 0.2s;
 
     &--back {
@@ -126,27 +112,25 @@
     }
   }
 
+  &__more {
+    grid-column: 1 / -1;
+    grid-row: 2 /3;
+    border: 0.7px solid $color-black;
+    background-color: $color-white;
+    padding: 0.5rem;
+    overflow: auto;
+    height: 90%;
+    margin: 0 1rem;
+  }
+
   &__details {
+    
+    
     &--front {
-      font-size: 1.5rem;
-      margin-bottom: 2.5rem;
-
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
     }
 
-    &--back {
-      grid-column: 1 / -1;
-      grid-row: 2 / 3;
-
-      font-size: 1.2rem;
-      border: 0.7px solid $color-black;
-      background-color: $color-white;
-      padding: 0.5rem;
-      overflow: auto;
-      height: 90%;
-      margin: 0 1rem;
-    }
   }
 
   &__duedate {
@@ -165,13 +149,17 @@
       @extend %owner-format;
     }
 
+    &--front {
+      margin-top: 0.4rem;
+    }
+
     &--back {
-      grid-column: 2 / 3;
+      grid-column: 2 / 2;
       justify-self: center;
     }
   }
 
-  &__text {
+  &__item__content {
     &--done {
       text-decoration: line-through;
     }
