--- a/src/components/filter-bar/filter-bar.styles.scss
+++ b/src/components/filter-bar/filter-bar.styles.scss
@@ -7,6 +7,7 @@
     padding: .7rem 0;
     min-height: 3rem;
     border-bottom: .5px solid $color-grey-dark-1;
+    background-color: $color-white;
 
 }
 
