--- a/src/components/todo-cockpit/todo-cockpit.styles.scss
+++ b/src/components/todo-cockpit/todo-cockpit.styles.scss
@@ -1,7 +1,9 @@
 .todo-cockpit {
-    width: 35rem;
     height: 100%;
     border: 3px solid greenyellow;
+    display: flex;
+
+
 }
 
 .add-list-input {
