--- a/src/components/todo-items-container/todo-items-container.styles.scss
+++ b/src/components/todo-items-container/todo-items-container.styles.scss
@@ -3,6 +3,7 @@
 .todo-items-container {
     border: 1px solid greenyellow;
     min-width: 30vw;
+    height: 100%;
     overflow-y: auto;
     overflow-x: auto;
     margin: 0 2rem;
@@ -10,6 +11,12 @@
 
     display: flex;
     flex-direction: column;
+
+    &--cockpit {
+        margin: 0;
+        min-width: 0;
+        flex-basis: 85%;
+    }
 
     &__header-group {
         position: sticky;
