Added Toggle and Button components for sorting, adding new todo and downloading to todo container

--- a/src/components/todo-items-container/todo-items-container.styles.scss
+++ b/src/components/todo-items-container/todo-items-container.styles.scss
@@ -41,6 +41,9 @@
 
 .header-top__action-icons {
     width: 100%;
-    display: flex;
+   
     background-color: $color-white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
