Added functionality disabling local filters if global filter(s) active; local filters matching the global one get styled differently

--- a/src/components/filter-card/filter-card.styles.scss
+++ b/src/components/filter-card/filter-card.styles.scss
@@ -1,8 +1,20 @@
 .filter-card {
-    border: 1px solid black;
+    border: 1px solid blue;
     margin: .5rem;
     padding: .5rem;
     font-size: 1.5rem;
+    background-color: black;
+    color: white;
+
+    &--highlighted {
+        opacity: 70%;
+    }
+
+    &--disabled {
+        opacity: 70%;
+        background-color: lightgrey;
+        color: grey;
+    }
 
     &__button {
         border: none;
