--- a/src/components/overlay/overlay.styles.scss
+++ b/src/components/overlay/overlay.styles.scss
@@ -2,7 +2,8 @@
 
 .overlay {
   &--opaque {
-    opacity: 0.5;
+    // opacity: 0.5;
+    background-color: rgba($color-black, 0.5)
   }
   &--transparent {
     opacity: 0;
@@ -14,7 +15,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: $color-black;
+    
 
     z-index: 20;
   }
