implemented drag and drop from beautiful dnd library

--- a/src/components/todo-item-small/todo-item-small.styles.scss
+++ b/src/components/todo-item-small/todo-item-small.styles.scss
@@ -2,11 +2,11 @@
 
 .todo-item-small {
   height: 5rem;
-  width: 100%;
+  width: 97%;
   border: 1px solid black;
   font-size: 1.2rem;
   box-shadow: 0 1rem 3rem rgba($color-black, 0.15);
-  margin-bottom: 1rem;
+  margin: .5rem;
   border-radius: 3%;
 
   display: flex;
