--- a/src/components/todo-items-container/todo-items-container.styles.scss
+++ b/src/components/todo-items-container/todo-items-container.styles.scss
@@ -4,8 +4,8 @@
     border: 1px solid greenyellow;
     min-width: 30vw;
     height: 100%;
-    overflow-y: auto;
-    overflow-x: auto;
+    // overflow-y: auto;
+    // overflow-x: auto;
     margin: 0 2rem;
     box-shadow: 0 1rem 3rem rgba($color-black, 0.15);
 
