--- a/src/App.styles.scss
+++ b/src/App.styles.scss
@@ -10,8 +10,8 @@
   height: 100%;
   top: 0px;
   border: 3px solid orangered;
-  overflow-x: scroll;
-  overflow-y: visible;
+  overflow-x: auto; //scroll;
+  overflow-y: auto; //visible;
 
   &__right-side {
     // flex-basis: 70%
