improved styling of app component; added functionality to add new todo list

--- a/src/App.styles.scss
+++ b/src/App.styles.scss
@@ -11,7 +11,8 @@
   top: 0px;
   border: 3px solid orangered;
   overflow-x: auto; //scroll;
-  overflow-y: auto; //visible;
+  overflow-y: hidden;
+  flex-basis: 90%;
 
   &__right-side {
     // flex-basis: 70%
