--- a/src/components/filter-card/filter-card.styles.scss
+++ b/src/components/filter-card/filter-card.styles.scss
@@ -1,9 +1,10 @@
+@import "../../constants/constants";
+
 .filter-card {
-  border: 1px solid blue;
-  margin: 0.5rem;
+  margin: 0.3rem;
   padding: 0.5rem;
-  font-size: 1.5rem;
-  background-color: black;
+  font-size: 1.2rem;
+  background-color: $color-black;
   color: white;
 
   &--highlighted {
