--- a/src/components/nav-top/nav-top.styles.scss
+++ b/src/components/nav-top/nav-top.styles.scss
@@ -2,7 +2,8 @@
 
 .header-top {
   height: 4rem;
-  background-color: greenyellow;
+  background-color: $color-grey-dark-3;
+  color: $color-black;
   width: 100%;
 
   align-items: center;
@@ -10,12 +11,15 @@
   &__items {
     height: 100%;
     display: flex;
+    padding: 0 .5rem;
     justify-content: space-around;
     align-items: center;
   }
 
   &__item-box {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    height: 100%;
+    padding: 0 .3rem;
 
     display: flex;
     align-items: center;
@@ -23,6 +27,12 @@
     &:not(:first-child) {
       margin-left: .5rem;
     }
+
+    &--sorted {
+      background-color: $color-blue-light-2;
+      background-image: $sorted-item-background;
+    }
+
   }
 
   &__item--sorted {
