--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -3,9 +3,9 @@
 .todo-container {
   display: flex;
   flex-direction: row;
-  height: 12rem;
+  height: 10rem;
   margin: 1rem;
-  color: $color-white;
+  color: $color-grey-dark-1;
 }
 
 .todo-item {
@@ -19,7 +19,8 @@
   }
 
   &__field--sorted {
-    border: 2px solid blue;
+    background-image: $sorted-item-background;
+    // color: $color-grey-dark-1;
   }
 
   &__icons {
@@ -41,8 +42,7 @@
   }
 
   &__side {
-    border-radius: 2px;
-    border-bottom: 1px solid $color-black;
+    border-radius: 5px;
     box-shadow: 0 1rem 3rem rgba($color-black, 0.15);
     height: 100%;
     width: 100%;
@@ -105,15 +105,13 @@
   }
 
   &__title {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: bold;
 
 
     &--back {
       grid-column: 1 / span 1;
       grid-row: 1 / 2;
-
-      // font-size: 1.5rem;
       margin: 0 1rem;
     }
   }
@@ -130,8 +128,7 @@
   }
 
   &__details {
-    
-    
+  
     &--front {
       display: flex;
       flex-direction: column;
@@ -140,8 +137,11 @@
   }
 
   &__duedate {
+    font-size: 1.2rem;
     span {
       @extend %duedate-format;
+      margin-left: .3rem;
+      
     }
 
     &--back {
@@ -151,8 +151,10 @@
   }
 
   &__owner {
+    font-size: 1.2rem;
     span {
       @extend %owner-format;
+      margin-left: .3rem;
     }
 
     &--front {
