--- a/src/components/todo-items-container/todo-items-container.styles.scss
+++ b/src/components/todo-items-container/todo-items-container.styles.scss
@@ -1,13 +1,12 @@
 @import "../../constants/constants";
 
 .todo-items-container {
-    border: 1px solid greenyellow;
-    min-width: 30vw;
+
+    min-width: 25vw;
     height: 100%;
-    // overflow-y: auto;
-    // overflow-x: auto;
-    margin: 0 2rem;
+    margin: 0 1.5rem;
     box-shadow: 0 1rem 3rem rgba($color-black, 0.15);
+    border-radius: 3px;
 
     display: flex;
     flex-direction: column;
@@ -28,13 +27,12 @@
 
     &__title {
         display: block;
-        background-color: black;
-        color: white;
+        background-color: $color-black;
+        color: $color-white;
         height: 3rem;
         line-height: 3rem;
-        font-size: 1.5rem;
+        font-size: 2rem;
         text-align: center;
-        // text-justify: center;
     }
 
 }
