--- a/src/constants/_constants.scss
+++ b/src/constants/_constants.scss
@@ -25,18 +25,19 @@ $color-custom-3: #F7B801;
 $color-custom-4: #F18701;
 $color-custom-5: #F35B04;
 
+$sorted-item-background: linear-gradient(to right, $color-custom-3, 80%, $color-custom-4);
+
+
+
 %duedate-format {
     padding: 0 0.5rem;
-    background-color: $color-blue-dark;
-    color: $color-grey-light-1;
+    background-color: $color-black;
+    color: $color-white;
     text-align: center;
 }
 
 %owner-format {
-    padding: 0 0.5rem;
-    background-color: $color-grey-dark-1;
-    color: $color-grey-light-1;
-    text-align: center;
+    @extend %duedate-format;
 }
 
 %non-selectable {
