adjusted styling of icon for clearing filters

--- a/src/components/filter-bar/filter-bar.styles.scss
+++ b/src/components/filter-bar/filter-bar.styles.scss
@@ -10,9 +10,14 @@
     background-color: $color-white;
 }
 
-.todo-input-wrapper {
-    display: flex;
-    align-items: center;
-}
+// .todo-input-wrapper {
+//     display: flex;
+//     align-items: center;
+// }
 
+.clear-filters-icon {
+    position: absolute;
+    right: .2rem;
+    top: .1rem;
+}
 
