--- a/src/components/filter-card/filter-card.styles.scss
+++ b/src/components/filter-card/filter-card.styles.scss
@@ -6,7 +6,8 @@
   font-size: 1.2rem;
   background-color: $color-black;
   color: white;
-
+  display: flex;
+  
   &--highlighted {
     opacity: 70%;
   }
