--- a/src/components/searchResultList/searchResultList.styles.scss
+++ b/src/components/searchResultList/searchResultList.styles.scss
@@ -21,7 +21,7 @@
     padding-left: 1rem;
 
     &--all {
-      background-color: $color-blue-light-2;
+      background-color: $color-primary-2;
     }
   }
 
