--- a/src/components/todo-item-small/todo-item-small.styles.scss
+++ b/src/components/todo-item-small/todo-item-small.styles.scss
@@ -14,7 +14,7 @@
   align-items: center;
 
   &--isdragging {
-    background-color: $color-blue-light-1;
+    background-color: $color-primary-1;
   }
 
   &__title {
