--- a/src/components/filter-bar/filter-bar.styles.scss
+++ b/src/components/filter-bar/filter-bar.styles.scss
@@ -10,14 +10,16 @@
     background-color: $color-white;
 }
 
-// .todo-input-wrapper {
-//     display: flex;
-//     align-items: center;
-// }
+.todo-input-wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-bottom: .7px solid black;
+    border-top: .7px solid black;
+}
 
 .clear-filters-icon {
-    position: absolute;
-    right: .2rem;
-    top: .1rem;
+    color: $color-grey-dark-3;
+    margin-right: .5rem;
 }
 
