--- a/src/components/nav-side/nav-side.styles.scss
+++ b/src/components/nav-side/nav-side.styles.scss
@@ -1,2 +1,7 @@
 @import "../../constants/constants";
 
+.side-nav-wrapper {
+    height: 100%;
+    background-color: $color-white;
+    padding-top: 4rem;
+}
