--- a/src/components/todo-input/todo-input.styles.scss
+++ b/src/components/todo-input/todo-input.styles.scss
@@ -4,9 +4,12 @@
 .todo-input {
   &__search-form {
     width: 100%;
-    display: flex;
-    padding: 0.5rem;
+    padding: .5rem 0;
     background-color: $color-white;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
   }
 
   &__search-field {
@@ -14,12 +17,16 @@
     font-family: inherit;
     padding: 0.5rem;
     border: none;
-    width: 100%;
     background-color: $color-white;
 
     &:focus {
       outline: none;
-      outline: 2px solid blue;
+      // outline: 1px solid $color-primary-3;
     }
   }
+}
+
+.search-icon {
+  color: $color-grey-dark-2;
+  margin-left: .5rem;
 }
