--- a/src/components/todo-list/todo-list.styles.scss
+++ b/src/components/todo-list/todo-list.styles.scss
@@ -10,6 +10,6 @@
 
 .droppable {
     &--is-dragging-over {
-        background-color: $color-blue-dark;
+        background-color: $color-primary-1;
     }
 }
